# hog_svm_detect

./: .gitignore  CMakeLists.txt  README.md  main.cpp  svmtest.csv  svmtrain.csv  test1.csv  test2.csv
hog_feature/: CMakeLists.txt  hog_feature.cpp  hog_feature.h
mysvm/: CMakeLists.txt  svm.cpp  svm.h
